[gd_scene load_steps=22 format=2]

[ext_resource path="res://Main_game.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://buttons/fd1.png" type="Texture" id=4]
[ext_resource path="res://buttons/fd2.png" type="Texture" id=5]
[ext_resource path="res://buttons/fd.png" type="Texture" id=6]
[ext_resource path="res://buttons/light_32x32.png" type="Texture" id=7]
[ext_resource path="res://buttons/fd3.png" type="Texture" id=8]
[ext_resource path="res://buttons/fd3_grey.png" type="Texture" id=9]
[ext_resource path="res://buttons/fd3_black.png" type="Texture" id=10]
[ext_resource path="res://explosion.wav" type="AudioStream" id=11]
[ext_resource path="res://untitled.wav" type="AudioStream" id=12]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0.160784, 0, 0.784314, 1, 0.0980392, 0.247059, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.430387, 0, 0, Vector2( 1, 0 ), -1.37021, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 200, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 7 )
color = Color( 1, 0, 0, 1 )
color_ramp = SubResource( 4 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 1, 1, 1, 0.137255 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 1, 1, 1, 0.137255 )
use_mipmaps = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 496, 344 )
scale = Vector2( 20.1016, 13.0156 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.298039 )
position = Vector2( -553, 312 )
scale = Vector2( 20.1016, 13.0156 )
amount = 20
lifetime = 3.0
preprocess = 3.0
speed_scale = 0.3
explosiveness = 0.35
fixed_fps = 100
process_material = SubResource( 5 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_right = 274.0
margin_bottom = 136.0
rect_scale = Vector2( 3.5, 3.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.478431, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
text = "Malcom had seldom seen a scene so puzzling
yet here was one on a silver platter
a dead man, poor, off the gird
no one even knew his name, but he was killed
and the killer must be found, Malcom promised.
and so he must figure out where to start"
align = 1
autowrap = true
uppercase = true

[node name="option_1" type="TextureButton" parent="."]
margin_left = 128.0
margin_top = 704.0
margin_right = 160.0
margin_bottom = 720.0
rect_scale = Vector2( 10, 10 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="text_for_option_1" type="Label" parent="option_1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 89.0
margin_bottom = 36.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.478431, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 2 )
text = "Investigate the body"
align = 1
autowrap = true

[node name="option_2" type="TextureButton" parent="."]
margin_left = 576.0
margin_top = 704.0
margin_right = 608.0
margin_bottom = 720.0
rect_scale = Vector2( 10, 10 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="text_for_option_2" type="Label" parent="option_2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 89.0
margin_bottom = 36.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.478431, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = -3
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true

[node name="quit" type="TextureButton" parent="."]
margin_top = 552.0
margin_right = 32.0
margin_bottom = 568.0
rect_scale = Vector2( 3, 3 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="quit"]
margin_left = 6.0
margin_right = 26.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.478431, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="enter_guilty" type="LineEdit" parent="."]
modulate = Color( 0.862745, 0, 0, 1 )
margin_left = 320.0
margin_top = 640.0
margin_right = 702.0
margin_bottom = 730.0
custom_colors/selection_color = Color( 0.894118, 0, 0, 1 )
custom_colors/cursor_color = Color( 0.568627, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
align = 1
expand_to_text_length = true
context_menu_enabled = false
placeholder_text = "No Capitals"
placeholder_alpha = 0.5
caret_blink = true

[node name="open_notes" type="TextureButton" parent="."]
margin_left = 944.0
margin_top = -8.0
margin_right = 1016.0
margin_bottom = 56.0
rect_scale = Vector2( 10, 10 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="open_notes"]
margin_left = 2.40001
margin_top = 40.0
margin_right = 31.4
margin_bottom = 54.0
rect_rotation = 270.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 2 )
text = "Notes"

[node name="TextEdit" type="TextEdit" parent="open_notes"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
self_modulate = Color( 1, 0.317647, 0.317647, 1 )
margin_left = 14.4
margin_top = 4.0
margin_right = 228.0
margin_bottom = 228.8
rect_min_size = Vector2( 0, -0.008 )
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Write your thoughts here"
bookmark_gutter = true
context_menu_enabled = false
drag_and_drop_selection_enabled = false
wrap_enabled = true
caret_blink = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -25.0

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[connection signal="pressed" from="option_1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="option_2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="text_entered" from="enter_guilty" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="open_notes" to="." method="_on_open_notes_pressed"]
[connection signal="finished" from="music" to="." method="_on_music_finished"]
